[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bravozero"
version = "1.0.0"
description = "Official Python SDK for Bravo Zero Breaking the Limits APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Bravo Zero", email = "sdk@bravozero.ai" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["bravo-zero", "ai", "governance", "memory", "sdk"]
dependencies = [
    "httpx>=0.25.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://bravozero.ai"
Documentation = "https://docs.bravozero.ai/sdk/python"
Repository = "https://github.com/bravozero/bravozero-python"
Changelog = "https://github.com/bravozero/bravozero-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["bravozero"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
